--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@quasar/app": "^1.6.1",
+        "@quasar/extras": "^1.6.2",
+        "quasar": "^1.9.14",
+        "vue-router": "^3.1.6"
     }
 }
