--- a/.env.example
+++ b/.env.example
@@ -44,4 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MIX_BASE_API=/api
 MIX_APP_NAME=${APP_NAME}
