--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@quasar/app": "^1.6.1",
         "@quasar/extras": "^1.6.2",
         "quasar": "^1.9.14",
-        "vue-router": "^3.1.6"
+        "vue-router": "^3.1.6",
+        "vuex": "^3.1.3"
     }
 }
