--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,6 +19,8 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
+    - name: npm install and build
+      run: npm install && npm run prod
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
